assets/sass/custom.scss
/* ... */
.uael-post__excerpt .qcpor-glenn-placement {display:none;}
#site-custom-header ul.elementor-nav-menu li.menu-item-has-children .mobileParentLink,
#site-logo .elementor-image a img.mobile-site-logo {
  display: none;
}
@media screen and (max-width: 1024px) {
  body {
    overflow-x: hidden;
    overflow-y: auto;
    position: relative;
  }
  #site-logo .elementor-image a img {
    display: none;
  }
  #site-logo .elementor-image {
    display: block;
    width: 160px;
    position: absolute;
    top: -8px;
    left: 14px;
    z-index: 100;
  }
  #site-logo .elementor-image a img.mobile-site-logo {
    display: block;
  }
  .elementor-location-header {
    background: #FFF;
    height: 110px;
    z-index: 300;
  }
  .elementor-location-header #site-custom-header {
    padding-top: 0!important;
    height: 50px;
  }
  .elementor-element-3cdd439 .elementor-element-a04547a,
  .elementor-201729 .elementor-element.elementor-element-19abdebc.elementor-widget-icon-list {
    position: relative;
    top: -8px;
  }
  .elementor-location-header #site-main-nav .elementor-menu-toggle {
    width: 45px;
    position: absolute;
    top: 0px;
    right: -6px;
  }
  #site-custom-header .elementor-nav-menu--dropdown {
    width: calc(100% + 20px);
    top: 30px;
    right: -10px;
    background: $secondary;
    padding: 5px 0;
    overflow-x: hidden;
    overflow-y: auto;
  }
  #site-custom-header ul.elementor-nav-menu li.menu-item-has-children .mobileParentLink,
  #site-custom-header ul.elementor-nav-menu li > a {
    display: block;
    cursor: pointer;
    font-family: $font_secondary;
    font-size: 20px;
    font-weight: 500;
    color: #FFF!important;
    padding: 15px 15px;
    text-transform: uppercase;
    transition: all ease .3s;
  }
  #site-custom-header ul.elementor-nav-menu > li {
    border-top: 1px solid rgba(255,255,255,.15);
  }
  #site-custom-header ul.elementor-nav-menu > li:first-child {
    border-top: none;
  }
  #site-custom-header ul.elementor-nav-menu li.menu-item-has-children .mobileParentLink:hover,
  #site-custom-header ul.elementor-nav-menu li:hover > a {
    color: #000!important;
  }
  #site-custom-header ul.elementor-nav-menu li.menu-item-has-children {
    a.has-submenu {
      display: none;
    }
  }
  #site-custom-header ul.elementor-nav-menu li.menu-item-has-children {
    .mobileParentLink {
      position: relative;
      padding-right: 55px;
      &:before {
        content:"";
        display: block;
        width: 12px;
        height: 12px;
        border-left: 1px solid #FFF;
        border-bottom: 1px solid #FFF;
        position: absolute;
        top: 22px;
        right: 20px;
        transform: rotate(-45deg);
      }
    }
    ul.sub-menu {
      position: relative!important;
      width: 100%;
      top: -11px;
      a {
        font-weight: normal;
        text-transform: none;
      }
    }
  }
  body.mobile-menu-open {
    &:before {
      content:"";
      display: block;
      width: 100%;
      height: 100%;
      position: fixed;
      top: 0;
      left: 0;
      z-index: 90;
      background: rgba(0,0,0,.75);
      @include animateThis(0.3s);
      @include animateEffect('fadeIn');
    }
  }
  .footerLinks {
    .elementor-menu-toggle {
      display: none!important;
    }
    .elementor-nav-menu--toggle .elementor-menu-toggle:not(.elementor-active)+.elementor-nav-menu__container {
      transform: none!important;
      max-height: 100%!important;
    }
    .elementor-nav-menu--dropdown {
      background-color: transparent;
    }
  }

  .elementor-element-3362e101 .elementor-widget-image .elementor-image img {
    max-width: 75%;
  }

  body.home .footerLinks ul.elementor-nav-menu>li,
  body.subpage .footerLinks ul.elementor-nav-menu>li {
    width: 100%;
    text-align: center;
  }
  body.subpage .footerLinks ul.elementor-nav-menu>li>a,
  body.home .footerLinks ul.elementor-nav-menu>li>a {
    display: inline-block;
    color: #FFF!important;
    font-size: 15px;
  }
  .elementor-199208 .elementor-element.elementor-element-c6c9ba6 {
    padding: 20px;
  }
  .elementor-199208 .elementor-element.elementor-element-3362e101 {
    padding: 0 0;
  }
  .elementor-199208 .elementor-element.elementor-element-c6c9ba6 > .elementor-container {
    min-height: 300px!important;
  }
  body.subpage .elementor-201721 .elementor-element.elementor-element-5df5836a {
    padding: 0 0;
  }
  body.archive {
    .elementor-heading-title {
      margin-top: 20px;
    }
  }
  [data-elementor-type="archive"] .elementor-section.elementor-top-section[data-element_type="section"] .elementor-container.elementor-column-gap-default .elementor-column-wrap {
    padding: 0 15px!important;
  }
  .elementor-199118 .elementor-element.elementor-element-b476fc9>.elementor-element-populated>.elementor-widget-wrap {
    padding: 20px!important;
  }
  .elementor-201638 .elementor-element.elementor-element-336a6b34 > .elementor-element-populated {
    margin: 0 0;
  }
  .elementor-201638 .elementor-element.elementor-element-2432747b > .elementor-element-populated {
    margin: 0 0 30px;
  }
  .elementor-top-section.elementor-element-3195bacc {
    margin-bottom: 30px;
  }
}
@media screen and (max-width: 782px) {
  html #wpadminbar {
    top: -46px;
  }
}
@media screen and (min-width: 768px) {
  .grid-posts-section.elementor-column.elementor-col-50 {
    width: 49%;
  }
}

